fixing phone number anchor on iphone

--- a/styles.css
+++ b/styles.css
@@ -354,6 +354,8 @@ span {
   transition: 0.3s ease-in-out;
 }
 
+.footer .social h1 {}
+
 .footer .social a:hover {
   color: var(--text);
   transform: scale(1.3)translateY(-5px);
